# defradb-client-py

./: .gitignore  LICENSE  Makefile  README.md  example.py  pyproject.toml
src/: __init__.py  defradb.py  example.py
src/defradb/: __init__.py  defradb.py
src/defradb/rpc/: api_pb2.py  api_pb2_grpc.py
src/rpc/: api_pb2_grpc.py
