[project]
name = "defradb"
version = "0.1.0"
description = "DefraDB Python client"
authors = [
    { name = "Orpheus Lummis", email = "o@orpheuslummis.info" }
]
dependencies = ["grpcio~=1.54.0", "requests~=2.29.0", "grpcio-tools~=1.54.0", "multiaddr~=0.0.9", "gql~=3.5.0b3", "aiohttp~=3.8", "requests_toolbelt~=0.10.1"]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Database",
]

[project.urls]
"Homepage" = "https://github.com/sourcenetwork/defradb-client-py"
"Bug Tracker" = "https://github.com/sourcenetwork/defradb-client-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black~=23.3.0", "ruff~=0.0.263", "twine~=4.0.2"]

[tool.pyright]
exclude = ["src/rpc/**"]
